Fix scroller on mobile

--- a/src/app/countries/page.module.css
+++ b/src/app/countries/page.module.css
@@ -48,7 +48,6 @@
   .vertical_content {
     width: 300px;
     height: 533px;
-    object-fit: cover;
   }
 }
 
