--- a/src/app/hashtags/[...theHashtag]/page.module.css
+++ b/src/app/hashtags/[...theHashtag]/page.module.css
@@ -34,8 +34,8 @@
 }
 
 .vertical_content {
-  width: 200px;
-  height: 355;
+  width: 260px;
+  height: 462px;
   object-fit: cover;
 }
 
@@ -47,7 +47,6 @@
   .vertical_content {
     width: 300px;
     height: 533px;
-    object-fit: cover;
   }
 }
 
